{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 51,
  "lineage": "20bd7d79-bb30-e620-0655-c8a4fb502251",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "main-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866308211434:route-table/rtb-023cb5c5373fa7f11",
            "default_route_table_id": "rtb-023cb5c5373fa7f11",
            "id": "rtb-023cb5c5373fa7f11",
            "owner_id": "866308211434",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0afe33a6d903e5735",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "petclinic-main-route-table"
            },
            "tags_all": {
              "Name": "petclinic-main-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cf95673902ea9f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.petclinic_vpc_internet_gateway",
            "aws_vpc.petclinic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "petclinic_application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b972fec07f1e659",
            "arn": "arn:aws:ec2:us-east-1:866308211434:instance/i-0a0efd982d5ee1f00",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0efd982d5ee1f00",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "AWS_KEY_PAIR",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07f924b0b6bf466ea",
            "private_dns": "ip-10-20-15-95.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.15.95",
            "public_dns": "ec2-44-203-104-219.compute-1.amazonaws.com",
            "public_ip": "44.203.104.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0abd65af1ec574584",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02ce8e3751423687e",
            "tags": {
              "Name": "petclinic-app"
            },
            "tags_all": {
              "Name": "petclinic-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a268abcb1a07fb6a"
            ]
          },
          "dependencies": [
            "aws_security_group.petclinic_sg",
            "aws_subnet.my_app_subnet-1",
            "aws_vpc.petclinic_vpc",
            "data.aws_ami.latest-amazon-linux-image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "petclinic_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b972fec07f1e659",
            "arn": "arn:aws:ec2:us-east-1:866308211434:instance/i-080714108824d3be2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-080714108824d3be2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "AWS_KEY_PAIR",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dabae87ed3b3872c",
            "private_dns": "ip-10-20-15-68.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.15.68",
            "public_dns": "ec2-44-199-245-64.compute-1.amazonaws.com",
            "public_ip": "44.199.245.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06ae2b49f7e0c0364",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02ce8e3751423687e",
            "tags": {
              "Name": "petclinic-db"
            },
            "tags_all": {
              "Name": "petclinic-db"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a268abcb1a07fb6a"
            ]
          },
          "dependencies": [
            "aws_security_group.petclinic_sg",
            "aws_subnet.my_app_subnet-1",
            "aws_vpc.petclinic_vpc",
            "data.aws_ami.latest-amazon-linux-image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "petclinic_vpc_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866308211434:internet-gateway/igw-0afe33a6d903e5735",
            "id": "igw-0afe33a6d903e5735",
            "owner_id": "866308211434",
            "tags": {
              "Name": "petclinic-internet-gateway"
            },
            "tags_all": {
              "Name": "petclinic-internet-gateway"
            },
            "vpc_id": "vpc-02cf95673902ea9f4"
          },
          "dependencies": [
            "aws_vpc.petclinic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "petclinic_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866308211434:security-group/sg-0a268abcb1a07fb6a",
            "description": "Allow Inbound SSH and TCP port 8080 traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a268abcb1a07fb6a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "PETCLINIC_SG",
            "name_prefix": "",
            "owner_id": "866308211434",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "petclinic-sg"
            },
            "tags_all": {
              "Name": "petclinic-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cf95673902ea9f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.petclinic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_app_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866308211434:subnet/subnet-02ce8e3751423687e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.15.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ce8e3751423687e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "866308211434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic"
            },
            "tags_all": {
              "Name": "petclinic"
            },
            "vpc_id": "vpc-02cf95673902ea9f4"
          },
          "dependencies": [
            "aws_vpc.petclinic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "petclinic_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866308211434:vpc/vpc-02cf95673902ea9f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0ffb8fbf3d0cbedf5",
            "default_route_table_id": "rtb-023cb5c5373fa7f11",
            "default_security_group_id": "sg-08d058cb6c4f19ef8",
            "dhcp_options_id": "dopt-0ed7cddc33aba8438",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02cf95673902ea9f4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-023cb5c5373fa7f11",
            "owner_id": "866308211434",
            "tags": {
              "Name": "petclinic-vpc"
            },
            "tags_all": {
              "Name": "petclinic-vpc"
            }
          }
        }
      ]
    }
  ]
}